# account/src/main/java/com/devsu/prueba/account/controller/MovementController.java
@@ -25,11 +25,11 @@ public class MovementController {
         return new ResponseEntity<>(movementService.postMovement(postMovementDto), HttpStatus.CREATED);
     }
 
-    @GetMapping()
+    @GetMapping("/{clientId}")
     public ResponseEntity<Flux<GetMovementDto>> getMovements(
+            @PathVariable(name = "clientId") UUID clientId,
             @RequestParam(name = "init_date", required = true) LocalDateTime initDate,
-            @RequestParam(name = "end_date", required = true) LocalDateTime endDate,
-            @RequestParam(name = "client_id", required = true) UUID clientId
+            @RequestParam(name = "end_date", required = true) LocalDateTime endDate
     ) {
         return ResponseEntity.ok(movementService.getMovementsByDateAndClientId(
                 initDate,
